# sectest

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
config/: default_config.yaml
config/scan_profiles/: comprehensive.yaml  quick.yaml  standard.yaml
src/security_agent/: __init__.py  __main__.py  cli.py
src/security_agent/agent/: __init__.py  prompts.py  runner.py  tools.py
src/security_agent/ai/: analyzer.py  fix_suggester.py  llm_client.py  risk_assessor.py
src/security_agent/core/: config.py  engine.py  scheduler.py
src/security_agent/human_loop/: approval.py  feedback.py  reviewer.py
src/security_agent/models/: report.py  scan_result.py  vulnerability.py
src/security_agent/reporting/: generator.py  html_report.py  json_report.py  markdown_report.py
src/security_agent/reporting/templates/: report.html.j2
src/security_agent/scanners/: api_security.py  base.py  clickjacking.py  cms_detect.py  cookies.py  cors.py  csrf.py  dependency.py  directory.py  headers.py  info_disclosure.py  jwt.py  open_redirect.py  sqli.py  ssl_tls.py  ssrf.py  subdomain.py  token_hijacking.py  xss.py
src/security_agent/utils/: http_client.py  logger.py  rate_limiter.py  validators.py
tests/: __init__.py  conftest.py  test_agent_prompts.py  test_agent_runner.py  test_agent_tools.py  test_cli_agent.py  test_engine_run_scanners_by_ids.py
tests/test_scanners/: test_jwt.py
